--- a/src/components/main/Main.module.css
+++ b/src/components/main/Main.module.css
@@ -11,7 +11,6 @@
   max-width: 95%;
   margin: 0 auto;
   position: relative;
-  z-index: 2;
   margin-bottom: 3rem;
 }
 
@@ -69,11 +68,12 @@
 
 .image {
   position: absolute;
-  width: 540px;
+  width: 430px;
   aspect-ratio: 9 / 16;
-  bottom: -10%;
+  top: 0;
   right: 0;
   text-align: right;
+  z-index: -1;
 }
 
 .image img {
@@ -87,34 +87,23 @@
   transition: 0.4s;
 }
 
-@media (max-width: 1280px) {
-  .character {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .image img {
-    width: 65%;
-  }
-}
-
 @media (max-width: 768px) {
-  .character {
-    justify-content: center;
-    align-items: center;
-  }
-
-  .image {
-    width: 360px;
-  }
-}
-
-@media (max-width: 640px) {
   body {
     overflow-y: auto;
   }
+
   .image {
-    position: static;
-    text-align: center;
+    width: 330px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .content .main_text h1 {
+    font-size: 5rem;
+  }
+
+  .content .main_text p {
+    width: 768px;
   }
 }
