--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,63 +1,111 @@
-.navbar input[type="checkbox"],
-.navbar .hamburger-lines {
-  display: none;
+.nav {
+    background: #000;
+    height: 80px;
 }
 
-.navbar {
-  width: 1400px;
-  max-width: 95%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 2rem 0 2rem;
+label.logo {
+    color: #fff;
+    font-size: 2rem;
+    line-height: 80px;
+    padding: 0 8rem;
+    font-weight: bold;
 }
 
-.navbar .logo a {
-  font-size: 2rem;
-  font-weight: 600;
-  color: #fff;
-  text-decoration: none;
+.nav ul {
+    float: right;
 }
 
-.menu_items {
-  order: 2;
-  display: flex;
-  align-items: center;
+.nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
 }
 
-.menu_items li {
-  list-style: none;
-  margin-left: 1.5rem;
+.nav ul a {
+    color: #fff;
+    margin-right: 1.5rem;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: 0.4s;
 }
 
-.menu_items a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 600;
-  border-bottom: 2px solid transparent;
-  transition: color 0.3s ease-in-out;
+a.active {
+    border-bottom: 2px solid #fff;
+    transition: 0.5s;
 }
 
-.menu_items li:not(:last-child) a:hover,
-.menu_items li:not(:last-child) a:focus {
-  border-bottom: 2px solid #fff;
+.nav ul li:not(:last-child) a:hover,
+.nav ul li:not(:last-child) a:focus {
+    border-bottom: 2px solid #fff;
+}
+.check {
+    display: none;
 }
 
-.menu_items li.btn a {
-  background: transparent;
-  color: #fff;
-  border: 1px solid #f5dca8;
-  padding: 0.7rem 1rem;
-  border-radius: 1.5rem;
-  line-height: 1.4;
-  font-size: 0.9rem;
-  font-weight: 500;
+.checkbtn {
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
 }
 
-.menu_items li.btn a:hover {
-  border: 1px solid #fff;
-  color: black;
-  background: white;
-  transition: 0.4s;
+@media (max-width: 768px) {
+    label.logo {
+        font-size: 30px;
+        padding-left: 50px;
+    }
+
+    .nav ul li a {
+        font-size: 1rem;
+    }
+
+    .checkbtn {
+        display: block;
+    }
+
+    ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #fff;
+        top: 80px;
+        right: -100%;
+        text-align: center;
+        transition: all 0.5s;
+    }
+
+    .nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    .nav ul li a {
+        font-size: 20px;
+        color: #000;
+    }
+
+    .check:checked ~ ul {
+        right: 0;
+    }
+}
+
+@media (max-width: 410px) {
+    .nav {
+        display: flex;
+        align-items: center;
+    }
+
+    label.logo {
+        padding: 0 5rem;
+    }
+}
+
+@media (max-width: 360px) {
+    label.logo {
+        padding: 0 3rem;
+    }
 }
