--- a/src/components/mypage/Killer.module.css
+++ b/src/components/mypage/Killer.module.css
@@ -5,8 +5,8 @@
   position: relative;
   display: flex;
   flex-shrink: 1;
-  background-color: #292929;
-  box-shadow: 2px 5px 25px hsla(100, 100%, 100%, 0.25);
+  background-color: #2c2c2c;
+  box-shadow: 2px 5px 12px hsl(0deg 0% 75% / 25%);
   transition: 0.5s;
   transform: rotate(0);
 }
@@ -30,7 +30,7 @@
 .player .player_job {
   font-size: 3rem;
   font-weight: 600;
-  color: #ff4655;
+  color: #fc7279;
 }
 
 .player .player_team {
