--- a/src/components/mypage/Subjobs.module.css
+++ b/src/components/mypage/Subjobs.module.css
@@ -11,22 +11,18 @@
   height: 215px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   border-radius: 15px;
   position: relative;
-  box-shadow: 5px 2px 25px hsla(100, 100%, 100%, 0.25);
+  box-shadow: 2px 5px 12px hsl(0deg 0% 75% / 25%);
+  cursor: pointer;
+  background: #2c2c2c;
 }
 
 .sub_player_job:hover {
   transform: rotateX(10deg) rotateY(-15deg) rotateZ(3deg);
-  box-shadow: 2px 10px 30px hsla(100, 100%, 100%, 0.25);
+  box-shadow: 5px 2px 25px hsla(100, 100%, 100%, 0.25);
   transition: 0.5s;
-}
-.sub_player_job:nth-child(1) {
-  background: linear-gradient(#181b29, #142534, #102c3c);
-}
-
-.sub_player_job:nth-child(2) {
-  background: linear-gradient(#181b29, #261a34, #2c1a39);
 }
 
 .sub_player_job:nth-child(1) {
@@ -44,7 +40,7 @@
 
 .sub_player .sub_player_job p {
   color: #fff;
-  padding: 1.125rem;
+  padding: 0 1.125rem;
 }
 
 .sub_player .sub_player_job .sub_player_image {
