--- a/src/components/ui/jobs/jobs.module.css
+++ b/src/components/ui/jobs/jobs.module.css
@@ -1,12 +1,28 @@
 .img_wrapper {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
-  border: 1px solid #fff;
+  border: none;
+  position: relative;
 }
 
 .img_wrapper img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+}
+
+.img_wrapper .nickname {
+  position: absolute;
+  bottom: -9px;
+  left: 0px;
+  font-size: 0.7rem;
+  width: 60px;
+  height: 10px;
+}
+
+.img_wrapper .nickname .nickname_name {
+  text-align: center;
+  color: #000;
+  font-weight: 600;
 }
