--- a/src/components/mypage/MainJob.module.css
+++ b/src/components/mypage/MainJob.module.css
@@ -68,6 +68,7 @@
   display: flex;
   position: relative;
   width: 280px;
+  transition: 0.5s;
 }
 
 .player .player_image img {
@@ -88,5 +89,40 @@
   .player {
     width: 100%;
     margin-bottom: 2rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .player .player_image {
+    width: 150px;
+    position: absolute;
+    top: 0;
+    right: 20px;
+  }
+
+  .player .player_image img {
+    width: 100%;
+    position: relative;
+  }
+
+  .player .player_stats {
+    width: 100%;
+    justify-content: space-around;
+    padding: 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .player .player_job {
+    font-size: 2rem;
+  }
+
+  .player .player_stat_number {
+    font-size: 1.8rem;
+  }
+
+  .player .player_image {
+    width: 100px;
+    top: 40px;
   }
 }
