--- a/src/components/mypage/Subjobs.module.css
+++ b/src/components/mypage/Subjobs.module.css
@@ -47,14 +47,16 @@
 
 .sub_player .sub_player_job .sub_player_image {
   position: absolute;
-  top: -40px;
+  top: -20px;
   right: 0px;
   width: 125px;
-  height: 125px;
+  height: 180px;
+  transition: 0.5s;
 }
 
 .sub_player .sub_player_job .sub_player_image img {
   width: 100%;
+  height: 100%;
 }
 
 .sub_player .sub_player_job .sub_player_odds {
@@ -89,5 +91,11 @@
 
   .sub_player_job:nth-child(2) {
     margin: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .sub_player .sub_player_job .sub_player_image {
+    width: 80px;
   }
 }
