--- a/src/components/mypage/RecentGame.module.css
+++ b/src/components/mypage/RecentGame.module.css
@@ -1,6 +1,5 @@
 .container {
   width: 1000px;
-  height: 300px;
   max-width: 95%;
   margin: 0 auto;
   margin-top: 1.5rem;
@@ -8,4 +7,14 @@
   grid-template-columns: repeat(2, 1fr);
   row-gap: 10px;
   column-gap: 35px;
+  margin-bottom: 1rem;
+}
+@media (max-width: 1046px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+  }
+}
+
+@media (max-width: 890px) {
 }
