--- a/src/components/ui/jobs/jobs.module.css
+++ b/src/components/ui/jobs/jobs.module.css
@@ -1,28 +1,71 @@
 .img_wrapper {
-  width: 70px;
-  height: 70px;
+  width: 64px;
+  height: 64px;
   border-radius: 50%;
   border: none;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 5px;
 }
 
 .img_wrapper img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  border: 1px solid;
 }
 
 .img_wrapper .nickname {
-  position: absolute;
-  bottom: -9px;
-  left: 0px;
-  font-size: 0.7rem;
-  width: 60px;
-  height: 10px;
+  font-size: 0.8rem;
 }
 
 .img_wrapper .nickname .nickname_name {
-  text-align: center;
+  width: 60px;
   color: #000;
   font-weight: 600;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+@media (max-width: 890px) {
+  .img_wrapper {
+    width: 90px;
+    height: 90px;
+  }
+}
+
+@media (max-width: 720px) {
+  .img_wrapper {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+@media (max-width: 648px) {
+  .img_wrapper {
+    width: 50px;
+    height: 50px;
+  }
+
+  .img_wrapper .nickname .nickname_name {
+    width: 50px;
+  }
+}
+
+@media (max-width: 520px) {
+  .img_wrapper {
+    width: auto;
+    height: 32px;
+    flex-direction: row;
+    border: none;
+    border-radius: initial;
+  }
+
+  .img_wrapper img {
+    border-radius: initial;
+    border: none;
+  }
 }
