--- a/src/components/Lobby/RoomCard.module.css
+++ b/src/components/Lobby/RoomCard.module.css
@@ -11,6 +11,19 @@
   background-color: rgb(42, 39, 68);
 }
 
+.card_disable {
+  border-radius: 10px;
+  background-color: rgb(36, 36, 36);
+  width: 208px;
+  height: 80px;
+  margin: 0px 10px 10px 10px;
+}
+
+.card_disable:hover {
+  cursor: default;
+  background-color: rgb(36, 36, 36);
+}
+
 .header {
   padding: 0.5rem;
 }
