--- a/src/components/Lobby/Lobby.module.css
+++ b/src/components/Lobby/Lobby.module.css
@@ -15,3 +15,11 @@
   justify-content: right;
   margin-bottom: 20px;
 }
+
+.roleDescButton {
+  float: left;
+  width: 20px;
+  height: 10%;
+  color: white;
+  border: 1px solid red;
+}
