--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,80 +1,82 @@
 .nav {
   height: 80px;
   width: 1600px;
-  max-width: 95%;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 label.logo {
-  color: #fff;
+  /* color: #fff; */
   font-size: 2rem;
   line-height: 80px;
-  padding: 0 8rem;
+  padding-left: 5%;
   font-weight: bold;
 }
 
 .logo a {
   color: white;
 }
+
 .nav ul {
   float: right;
+  padding-right: 3%;
 }
 
 .nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
+  /* margin: 0 5px; */
+  margin-right: 2rem;
 }
 
 .nav ul a {
   color: #fff;
-  margin-right: 1.5rem;
+  /* margin-right: 1.5rem; */
   font-weight: 600;
-  border-bottom: 2px solid transparent;
-  transition: 0.4s;
+  /* border-bottom: 2px solid transparent; */
+  /* transition: 0.4s; */
 }
 
-a.active {
+/* a.active {
   border-bottom: 2px solid #fff;
   transition: 0.5s;
-}
+} */
 
-.nav ul li:not(:last-child) a:hover,
-.nav ul li:not(:last-child) a:focus {
+.nav ul a:hover {
   border-bottom: 2px solid #fff;
 }
+
 .check {
   display: none;
 }
 
 .checkbtn {
-  font-size: 30px;
-  color: #fff;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
   display: none;
 }
 
 @media (max-width: 768px) {
-  label.logo {
-    font-size: 30px;
-    padding-left: 50px;
-  }
+  /* label.logo {
+    font-size: 2rem;
+    padding-left: 5%;
+  } */
 
-  .nav ul li a {
+  /* .nav ul li a {
     font-size: 1rem;
-  }
+  } */
 
   .checkbtn {
+    color: #fff;
+    float: right;
+    line-height: 90px;
+    margin-right: 5%;
+    cursor: pointer;
     display: block;
   }
 
   ul {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #fff;
     top: 80px;
     right: -100%;
@@ -94,11 +96,16 @@ a.active {
     color: #000;
   }
 
+  .nav ul a:hover,
+  .nav ul a:active {
+    border-bottom: 2px solid #000;
+  }
+
   .check:checked ~ ul {
     right: 0;
   }
 }
-
+/* 
 @media (max-width: 410px) {
   .nav {
     display: flex;
@@ -106,12 +113,12 @@ a.active {
   }
 
   label.logo {
-    padding: 0 5rem;
+    padding-left: 5%;
   }
-}
+} */
 
-@media (max-width: 360px) {
+/* @media (max-width: 360px) {
   label.logo {
     padding: 0 3rem;
   }
-}
+} */
