--- a/src/components/ui/modal/Modal.module.css
+++ b/src/components/ui/modal/Modal.module.css
@@ -11,6 +11,7 @@
   z-index: 100;
   overflow: hidden;
   margin: auto;
+  border-radius: 10px;
 }
 
 .header {
@@ -40,7 +41,8 @@
   width: 95%;
   height: 30px;
   background-color: white;
-  margin: 0px 0px 5px 0px;
+  margin: 5px 0;
+  border-radius: 5px;
 }
 
 .form {
