--- a/src/components/ui/avatar/Avatar.module.css
+++ b/src/components/ui/avatar/Avatar.module.css
@@ -46,3 +46,28 @@
   transition: opacity 0.2s;
   background-size: contain;
 }
+
+.game_setting .game_setting_inner .player .player_avatar_container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.2;
+}
+
+.game_setting
+  .game_setting_inner
+  .player
+  .player_avatar_container
+  .player_avatar_avatar {
+  width: 70%;
+  height: 70%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
