--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -17,19 +17,19 @@ label.logo {
   color: white;
 }
 
-.nav ul {
+.nav .ul {
   float: right;
   padding-right: 3%;
 }
 
-.nav ul li {
+.nav .ul .li {
   display: inline-block;
   line-height: 80px;
   /* margin: 0 5px; */
   margin-right: 2rem;
 }
 
-.nav ul a {
+.nav .ul a {
   color: #fff;
   /* margin-right: 1.5rem; */
   font-weight: 600;
@@ -73,7 +73,7 @@ label.logo {
     display: block;
   }
 
-  ul {
+  .ul {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -85,23 +85,23 @@ label.logo {
     z-index: 999;
   }
 
-  .nav ul li {
+  .nav .ul .li {
     display: block;
     margin: 50px 0;
     line-height: 30px;
   }
 
-  .nav ul li a {
+  .nav .ul .li a {
     font-size: 20px;
     color: #000;
   }
 
-  .nav ul a:hover,
-  .nav ul a:active {
+  .nav .ul a:hover,
+  .nav .ul a:active {
     border-bottom: 2px solid #000;
   }
 
-  .check:checked ~ ul {
+  .check:checked ~ .ul {
     right: 0;
   }
 }
