--- a/src/components/ui/roleDesc/RoleDesc.module.css
+++ b/src/components/ui/roleDesc/RoleDesc.module.css
@@ -1,41 +1,52 @@
-.roleDesc {
-  position: fixed;
-  width: 300px;
-  height: 500px;
-  float: left;
-  padding: 10px 10px 10px 10px;
-  background-color: rgb(48, 46, 46);
-  justify-content: center;
-  text-align: center;
-
-  border: 1px solid red;
+.role_desc {
+  height: 470px;
 }
 
-.role {
+.role_desc .roles_inner {
+  position: absolute;
+  top: 45%;
+  left: 0;
   display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 20%;
+  width: 240px;
+  height: 330px;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  transform: translateY(-50%);
+  transition: all 0.5s;
+  margin-left: -240px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.role_desc .roles_inner .roles_roles_container {
   position: relative;
-  top: 0px;
-  margin: 10px 0px 20px 0px;
-  border: 1px solid blue;
-}
-
-.desc {
   width: 100%;
-  height: 70%;
-  margin: -20px 0px 0px 0px;
-  border: 1px solid yellow;
-}
-.citizen {
-  margin: 0px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.police {
-  margin: 0px 0px 0px 5%;
+.role_desc .roles_inner .roles_roles_container svg {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
-.killer {
-  margin: 0px 0px 0px 5%;
+.role_desc .roles_inner .roles_roles_container .roles_role {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.role_desc .roles_inner .roles_roles_container .roles_role .role {
+  width: 64px;
+  height: 64px;
+}
+
+.role_desc .roles_inner .roles_roles_container .roles_role .role img {
+  width: 100%;
 }
