--- a/src/components/ui/avatar/Avatar.module.css
+++ b/src/components/ui/avatar/Avatar.module.css
@@ -54,7 +54,7 @@
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  transition: opacity 0.2;
+  transition: opacity 0.2s;
 }
 
 .game_setting
@@ -70,4 +70,17 @@
   transform: translate(-50%, -50%);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+@media (max-width: 684px) {
+  .game_setting .game_setting_inner .player {
+    width: 102px;
+    height: 102px;
+  }
+}
+@media (max-width: 480px) {
+  .game_setting .game_setting_inner .player {
+    width: 76px;
+    height: 76px;
+  }
 }
