--- a/src/components/ui/gameboard/GameBoard.module.css
+++ b/src/components/ui/gameboard/GameBoard.module.css
@@ -4,10 +4,17 @@
   height: 560px;
   position: absolute;
   border-radius: 50%;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-size: contain;
+}
+
+.game_table .game_table_buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .game_table .game_table_settings {
@@ -18,4 +25,18 @@
   z-index: 1;
   text-align: left;
   margin-bottom: 32px;
+}
+
+@media (max-width: 684px) {
+  .game_table {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 480px) {
+  .game_table {
+    width: 280px;
+    height: 280px;
+  }
 }
