--- a/src/components/ui/roleDesc/RoleDesc.module.css
+++ b/src/components/ui/roleDesc/RoleDesc.module.css
@@ -21,8 +21,9 @@
 }
 
 .role_desc .roles_inner .roles_roles_container {
-  position: relative;
   width: 100%;
+  position: relative;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,13 +41,24 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 0.7rem;
 }
 
 .role_desc .roles_inner .roles_roles_container .roles_role .role {
   width: 64px;
   height: 64px;
+  cursor: pointer;
 }
 
 .role_desc .roles_inner .roles_roles_container .roles_role .role img {
   width: 100%;
+}
+
+.role_desc .roles_inner .roles_roles_container .select_avatar {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
 }
