--- a/src/pages/Game.module.css
+++ b/src/pages/Game.module.css
@@ -1,7 +1,8 @@
 .layout {
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    overflow: hidden;
-    opacity: 0.8;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  overflow: hidden;
+  opacity: 0.8;
+  position: relative;
 }
