--- a/src/components/Lobby/RoomCard.module.css
+++ b/src/components/Lobby/RoomCard.module.css
@@ -1,21 +1,25 @@
 .card {
   border-radius: 10px;
-  background-color: rgb(32, 29, 58);
-  width: 208px;
-  height: 80px;
-  margin: 0px 10px 10px 10px;
+  background-color: #292929;
+  width: 330px;
+  height: 200px;
+  margin: 0px 10px 20px 10px;
+  box-shadow: 2px 10px 15px hsla(100, 100%, 100%, 0.15);
 }
 
 .card:hover {
   cursor: pointer;
-  background-color: rgb(42, 39, 68);
+  background-color: #393939;
+  transform: scale(1.04);
+  box-shadow: 2px 10px 30px hsla(100, 100%, 100%, 0.25);
+  transition: 0.5s;
 }
 
 .activeCard {
   border-radius: 10px;
-  background-color: rgba(42, 39, 68, 0.5);
-  width: 208px;
-  height: 80px;
+  background-color: rgb(29, 29, 29);
+  width: 330px;
+  height: 200px;
   margin: 0px 10px 10px 10px;
 }
 
@@ -24,18 +28,17 @@
 }
 
 .header {
-  padding: 0.5rem;
-}
-
-.header h3 {
-  margin: 0;
+  padding: 1rem 1rem 1rem 1.5rem;
   color: white;
 }
 
 .actions {
-  padding: 0.5rem 0.5rem 0rem 0rem;
+  position: relative;
+  bottom: -95px;
+  padding: 0.5rem 1rem 0rem 0rem;
   display: flex;
   justify-content: flex-end;
+
   color: white;
 }
 
@@ -43,4 +46,57 @@
   float: right;
   margin-top: -24px;
   color: white;
+}
+
+@media (max-width: 1170px) {
+  .card {
+    width: 260px;
+    height: 200px;
+  }
+  .activeCard {
+    width: 260px;
+    height: 200px;
+  }
+}
+
+@media (max-width: 708px) {
+  .card {
+    width: 400px;
+    height: 200px;
+  }
+  .activeCard {
+    width: 400px;
+    height: 200px;
+  }
+}
+
+@media (max-width: 520px) {
+  .card {
+    width: 300px;
+    height: 200px;
+  }
+  .activeCard {
+    width: 300px;
+    height: 200px;
+  }
+}
+
+@media (max-width: 400px) {
+  .card {
+    width: 250px;
+    height: 100px;
+  }
+  .activeCard {
+    width: 250px;
+    height: 100px;
+  }
+
+  .actions {
+    position: relative;
+    bottom: 0;
+    padding: 0.5rem 1rem 0rem 0rem;
+    display: flex;
+    justify-content: flex-end;
+    color: white;
+  }
 }
