--- a/src/components/ui/logCard/LogCard.module.css
+++ b/src/components/ui/logCard/LogCard.module.css
@@ -2,21 +2,17 @@
   width: 450px;
   height: 150px;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
-  margin: -75px 0px 0px -225px;
   padding: 5px 5px 5px 5px;
-
+  transform: translate(-50%, -50%);
   background-color: white;
-  /* border: 1px solid red; */
 }
 
 .selectRound {
   display: flex;
   padding: 1px 1px 0px 1px;
   margin: 0px 0px 5px 0px;
-
-  /* border: 1px solid yellow; */
 }
 
 .selected {
@@ -24,13 +20,10 @@
   justify-content: space-between;
   width: 100%;
   height: 75%;
-
-  /* border: 1px solid blue; */
 }
 
 .selector {
   width: 20%;
-  /* flex-grow: calc(); */
   margin: 0px 0px 0px 0px;
 }
 
@@ -38,15 +31,12 @@
   display: flex;
   width: 50%;
   margin: 0px 0px 0px 0px;
-
-  /* border: 1px solid green; */
 }
 
 .result {
   display: flex;
   width: 30%;
   margin: 0px 0px 0px 10px;
-  /* border: 1px solid black; */
 }
 
 .img_wrapper {
@@ -54,8 +44,6 @@
   width: 25%;
   height: 100%;
   margin: 0px 0px 0px 3px;
-
-  /* border: 1px solid red; */
 }
 
 .nickname {
@@ -71,8 +59,11 @@
 
   margin: 5px 0px 0px 5px;
 
-  background: linear-gradient(rgb(90, 90, 90), rgb(107, 107, 107), rgb(30, 31, 31));
-  /* border: 1px solid black; */
+  background: linear-gradient(
+    rgb(90, 90, 90),
+    rgb(107, 107, 107),
+    rgb(30, 31, 31)
+  );
 }
 
 .test2 {
@@ -81,8 +72,11 @@
 
   margin: 5px 0px 0px 5px;
 
-  background: linear-gradient(rgb(90, 90, 90), rgb(107, 107, 107), rgb(30, 31, 31));
-  /* border: 1px solid black; */
+  background: linear-gradient(
+    rgb(90, 90, 90),
+    rgb(107, 107, 107),
+    rgb(30, 31, 31)
+  );
 }
 
 .test3 {
@@ -91,8 +85,11 @@
 
   margin: 5px 0px 0px 5px;
 
-  background: linear-gradient(rgb(90, 90, 90), rgb(107, 107, 107), rgb(30, 31, 31));
-  /* border: 1px solid black; */
+  background: linear-gradient(
+    rgb(90, 90, 90),
+    rgb(107, 107, 107),
+    rgb(30, 31, 31)
+  );
 }
 
 .round {
@@ -100,6 +97,5 @@
   text-align: center;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
-
   border: 1px solid red;
 }
