--- a/src/components/ui/under-card/HalfCircle.module.css
+++ b/src/components/ui/under-card/HalfCircle.module.css
@@ -1,11 +1,11 @@
 .half_circle {
-  width: 300px;
-  height: 100px;
+  width: 100px;
+  height: 50px;
   position: fixed;
   bottom: 0;
-  left: 50%;
+  left: 48%;
   transform: translateX(-50%);
-  background-color: red;
+  background-color: #fff;
   border-top-right-radius: 100%;
   border-top-left-radius: 100%;
   transition: all 1s;
