--- a/src/components/select-card/SelectCard.module.css
+++ b/src/components/select-card/SelectCard.module.css
@@ -3,11 +3,22 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  bottom: 0;
+  bottom: 0px;
   left: 52%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 25%);
   background-color: #fff;
   border-top-right-radius: 100%;
   border-top-left-radius: 100%;
-  transition: all 1s;
+  animation-name: up;
+  animation-duration: 1s;
+}
+
+@keyframes up {
+  0% {
+    bottom: -300px;
+  }
+
+  100% {
+    bottom: 0px;
+  }
 }
