feature room list

--- a/src/components/lobby/Lobby.module.css
+++ b/src/components/lobby/Lobby.module.css
@@ -4,9 +4,8 @@
   max-width: 95%;
   margin: 0 auto;
   padding: 10px 0px 10px 0px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   overflow-y: scroll;
 }
 
