--- a/src/components/ui/logCard/LogCard.module.css
+++ b/src/components/ui/logCard/LogCard.module.css
@@ -9,81 +9,93 @@
   background-color: white;
 }
 
-.round_select {
+.selectRound {
   display: flex;
   padding: 1px 1px 0px 1px;
   margin: 0px 0px 5px 0px;
 }
 
-.select_box {
-  width: 50px;
-  height: 20px;
-  font-size: 0.7rem;
-  border: 1px solid black;
-  border-radius: 3px;
+.selected {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 75%;
+}
+
+.selector {
+  width: 20%;
+  margin: 0px 0px 0px 0px;
+}
+
+.selectedUser {
+  display: flex;
+  width: 50%;
+  margin: 0px 0px 0px 0px;
 }
 
 .result {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  width: 30%;
+  margin: 0px 0px 0px 10px;
+}
+
+.img_wrapper {
+  display: flex;
+  width: 25%;
+  height: 100%;
+  margin: 0px 0px 0px 3px;
+}
+
+.nickname {
+  position: relative;
+  bottom: -80px;
+  left: -45px;
+  font-size: 0.7rem;
+}
+
+.test {
+  width: 60%;
   height: 80%;
 
-  padding: 5px 5px 5px 5px;
+  margin: 5px 0px 0px 5px;
 
-  border: 1px solid red;
+  background: linear-gradient(
+    rgb(90, 90, 90),
+    rgb(107, 107, 107),
+    rgb(30, 31, 31)
+  );
 }
 
-.player_card {
-  width: 15%;
+.test2 {
+  width: 22%;
+  height: 80%;
+
+  margin: 5px 0px 0px 5px;
+
+  background: linear-gradient(
+    rgb(90, 90, 90),
+    rgb(107, 107, 107),
+    rgb(30, 31, 31)
+  );
+}
+
+.test3 {
+  width: 45%;
+  height: 80%;
+
+  margin: 5px 0px 0px 5px;
+
+  background: linear-gradient(
+    rgb(90, 90, 90),
+    rgb(107, 107, 107),
+    rgb(30, 31, 31)
+  );
+}
+
+.round {
+  width: 10%;
+  text-align: center;
   margin: 0px 0px 0px 0px;
-
-  border: 1px solid yellow;
-}
-
-@media (max-width: 684px) {
-  .card {
-    width: 330px;
-    height: 100px;
-    font-size: 0.5rem;
-    padding: 3px 3px 3px 3px;
-  }
-  .round_select {
-    margin: 0px 0px 3px 0px;
-  }
-  .select_box {
-    width: 45px;
-    height: 20px;
-    margin: 0px 0px 0px 0px;
-    font-size: 0.6rem;
-    border: 1px solid black;
-    border-radius: 3px;
-  }
-  .result {
-    height: 75%;
-    padding: 3px 3px 3px 3px;
-  }
-}
-
-@media (max-width: 480px) {
-  .card {
-    width: 230px;
-    height: 70px;
-    font-size: 0.5rem;
-    padding: 1px 1px 1px 1px;
-  }
-  .round_select {
-    margin: 0px 0px 1px 0px;
-  }
-  .select_box {
-    width: 40px;
-    height: 15px;
-    font-size: 0.5rem;
-    border: 1px solid black;
-    border-radius: 3px;
-  }
-  .result {
-    height: 75%;
-    padding: 1px 1px 1px 1px;
-  }
+  padding: 0px 0px 0px 0px;
+  border: 1px solid red;
 }
