--- a/src/components/lobby/Lobby.module.css
+++ b/src/components/lobby/Lobby.module.css
@@ -10,15 +10,13 @@
 }
 
 .createButton {
-  /* width: 1400px; */
-  max-width: 80%;
-  margin: 0 10%;
+  width: 1300px;
+  max-width: 95%;
+  margin: 0 auto;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
   margin-bottom: 20px;
-
-  /* border: 1px solid red; */
 }
 
 .guickStart {
@@ -45,4 +43,16 @@
 
 .container::-webkit-scrollbar-thumb {
   background: #aaa;
+}
+
+@media (max-width: 1046px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
