--- a/src/components/lobby/RoomCard.module.css
+++ b/src/components/lobby/RoomCard.module.css
@@ -1,10 +1,13 @@
+.room_link {
+  width: 100%;
+}
 .card {
   border-radius: 10px;
   background-color: #292929;
-  width: 330px;
-  height: 200px;
+  width: 95%;
+  height: 230px;
   margin: 0px 10px 20px 10px;
-  box-shadow: 2px 10px 15px hsla(100, 100%, 100%, 0.15);
+  box-shadow: 2px 5px 12px hsl(0deg 0% 75% / 25%);
 }
 
 .card:hover {
@@ -18,8 +21,8 @@
 .activeCard {
   border-radius: 10px;
   background-color: rgb(29, 29, 29);
-  width: 330px;
-  height: 200px;
+  width: 95%;
+  height: 230px;
   margin: 0px 10px 10px 10px;
 }
 
@@ -28,75 +31,20 @@
 }
 
 .header {
-  padding: 1rem 1rem 1rem 1.5rem;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
 .actions {
   position: relative;
-  bottom: -95px;
-  padding: 0.5rem 1rem 0rem 0rem;
+  bottom: -115px;
+  padding: 1rem;
   display: flex;
   justify-content: flex-end;
-
   color: white;
-}
-
-.lockIcon {
-  float: right;
-  margin-top: -24px;
-  color: white;
-}
-
-@media (max-width: 1170px) {
-  .card {
-    width: 260px;
-    height: 200px;
-  }
-  .activeCard {
-    width: 260px;
-    height: 200px;
-  }
-}
-
-@media (max-width: 708px) {
-  .card {
-    width: 400px;
-    height: 200px;
-  }
-  .activeCard {
-    width: 400px;
-    height: 200px;
-  }
-}
-
-@media (max-width: 520px) {
-  .card {
-    width: 300px;
-    height: 200px;
-  }
-  .activeCard {
-    width: 300px;
-    height: 200px;
-  }
-}
-
-@media (max-width: 400px) {
-  .card {
-    width: 250px;
-    height: 100px;
-  }
-  .activeCard {
-    width: 250px;
-    height: 100px;
-  }
-
-  .actions {
-    position: relative;
-    bottom: 0;
-    padding: 0.5rem 1rem 0rem 0rem;
-    display: flex;
-    justify-content: flex-end;
-    color: white;
-  }
+  font-size: 1.1rem;
+  font-weight: 600;
 }
