--- a/src/components/ui/button/Button.module.css
+++ b/src/components/ui/button/Button.module.css
@@ -19,6 +19,10 @@
   outline: none;
 }
 
+.buttonPrimary:disabled {
+  opacity: 0.3;
+}
+
 .buttonDanger {
   font: inherit;
   border: 1px solid rgb(244, 47, 47);
