--- a/src/components/ui/logCard/LogCard.module.css
+++ b/src/components/ui/logCard/LogCard.module.css
@@ -7,8 +7,10 @@
   padding: 5px 5px 5px 5px;
   transform: translate(-50%, -50%);
   background-color: white;
+  z-index: 100;
 
   background-image: url("../../../assets/images/image-log-card-background.jpg");
+  background-size: cover;
 }
 
 .round_select {
