--- a/src/components/game/gameboard/GameBoard.module.css
+++ b/src/components/game/gameboard/GameBoard.module.css
@@ -11,6 +11,8 @@
 }
 
 .game_table .game_table_buttons {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   top: 50%;
   left: 50%;
