--- a/src/components/game/chatting/ChatWindow.module.css
+++ b/src/components/game/chatting/ChatWindow.module.css
@@ -34,6 +34,8 @@
 }
 
 .chatting .chatting_message {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 400px;
     padding: 5px;
