--- a/src/components/game/underCard/UnderCard.module.css
+++ b/src/components/game/underCard/UnderCard.module.css
@@ -2,20 +2,42 @@
   width: 100px;
   height: 50px;
   position: fixed;
-  bottom: -9999px;
+  bottom: -500px;
   left: 48%;
   transform: translateX(-50%);
   background-color: #fff;
   border-top-right-radius: 100%;
   border-top-left-radius: 100%;
-  transition: all 1s;
 }
 
 .half_circle_up {
-  bottom: 0px;
-  transition: all 1s;
+  bottom: 0;
+  animation: open 0.5s;
 }
 
+.half_circle_down {
+  bottom: -500px;
+  animation: close 1s;
+}
+
+@keyframes open {
+  0% {
+    bottom: -500px;
+  }
+
+  100% {
+    bottom: 0px;
+  }
+}
+
+@keyframes close {
+  0% {
+    bottom: 0px;
+  }
+  100% {
+    bottom: -500px;
+  }
+}
 .card_agree {
   position: relative;
   top: 50%;
