--- a/src/components/game/avatar/Avatar.module.css
+++ b/src/components/game/avatar/Avatar.module.css
@@ -32,11 +32,7 @@
   border-radius: 50%;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar
-  .player_avatar_background {
+.game_setting .game_setting_inner .player .player_avatar .player_avatar_background {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -57,11 +53,7 @@
   transition: opacity 0.2s;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar_container
-  .player_username_wrapper {
+.game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
   width: 150px;
   height: 30px;
   position: absolute;
@@ -92,11 +84,7 @@
   white-space: nowrap;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar_container
-  .player_avatar_avatar {
+.game_setting .game_setting_inner .player .player_avatar_container .player_avatar_avatar {
   width: 70%;
   height: 70%;
   position: absolute;
@@ -112,10 +100,18 @@
     width: 102px;
     height: 102px;
   }
+
+  .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
+    width: 100px;
+  }
 }
 @media (max-width: 480px) {
   .game_setting .game_setting_inner .player {
     width: 76px;
     height: 76px;
+  }
+
+  .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
+    width: 50px;
   }
 }
