--- a/src/components/game/logCard/RoundToken.module.css
+++ b/src/components/game/logCard/RoundToken.module.css
@@ -1,15 +1,18 @@
 .round_token {
   display: flex;
   width: 20%;
-
-  /* margin: 0px 10px 0px 0px; */
   margin: 0px 5px 0px 5px;
-
+  position: relative;
   background-image: url("../../../assets/images/image-round-token-background.png");
   background-size: contain;
+}
 
-  /* background-image: url("../../../assets/images/image-log-card-background.jpg");
-  background-size: cover; */
+.require {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 .round_token_back {
@@ -17,7 +20,6 @@
   position: absolute;
   top: 40%;
   left: 15%;
-
   width: 392px;
   height: 69px;
 }
@@ -26,7 +28,6 @@
   position: absolute;
   top: 55%;
   left: 25%;
-
   width: 280px;
   height: 46px;
 }
@@ -35,8 +36,11 @@
   cursor: pointer;
 }
 
-img {
-  object-fit: contain;
+.round_token img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media (max-width: 684px) {
