--- a/src/components/game/avatar/Avatar.module.css
+++ b/src/components/game/avatar/Avatar.module.css
@@ -54,11 +54,11 @@
 }
 
 .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
-  width: 150px;
-  height: 30px;
+  width: 100%;
+  height: 28px;
   position: absolute;
   background-image: url("../../../assets/images/image-nickname.png");
-  background-size: cover;
+  background-size: contain;
   margin-bottom: -35px;
   bottom: 0;
   left: 50%;
@@ -102,7 +102,17 @@
   }
 
   .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
-    width: 100px;
+    height: 22px;
+    margin-bottom: -27px;
+  }
+
+  .game_setting
+    .game_setting_inner
+    .player
+    .player_avatar_container
+    .player_username_wrapper
+    .player_username {
+    font-size: 0.8rem;
   }
 }
 @media (max-width: 480px) {
@@ -112,6 +122,16 @@
   }
 
   .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
-    width: 50px;
+    height: 17px;
+    margin-bottom: -18px;
+  }
+
+  .game_setting
+    .game_setting_inner
+    .player
+    .player_avatar_container
+    .player_username_wrapper
+    .player_username {
+    font-size: 0.6rem;
   }
 }
