--- a/src/components/game/cardBack/CardBack.module.css
+++ b/src/components/game/cardBack/CardBack.module.css
@@ -1,4 +1,4 @@
-.card_back_wrapper {
+.no_selected_card {
   position: relative;
   width: 140px;
   height: 190px;
@@ -6,11 +6,11 @@
   margin-left: -35px;
 }
 
-.card_back_wrapper:hover {
+.no_selected_card:hover {
   transform: scale(1.08);
 }
 
-.card_back_wrapper .card {
+.no_selected_card .card {
   position: absolute;
   top: 0;
   left: 0;
@@ -20,7 +20,7 @@
   transition: transform 0.6s cubic-bezier(0.49, 0.23, 0.58, 0.49);
 }
 
-.card_back_wrapper .card .card_back {
+.no_selected_card .card .card_back {
   background: repeating-linear-gradient(
     135deg,
     rgba(0, 0, 0, 0.3),
@@ -42,7 +42,7 @@
   width: 100%;
 }
 
-.card_back_wrapper .card .card_back .layer {
+.no_selected_card .card .card_back .layer {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -51,14 +51,14 @@
   position: relative;
 }
 
-.card_back_wrapper .card .card_back .layer h3 {
+.no_selected_card .card .card_back .layer h3 {
   text-align: center;
   font-size: 1.6rem;
   margin: 0 auto;
   font-weight: 600;
 }
 
-.card_back_wrapper .card .card_back .layer .corner {
+.no_selected_card .card .card_back .layer .corner {
   border-right: 2px solid #d4cd96;
   border-top: 2px solid #d4cd96;
   height: 12px;
@@ -66,25 +66,213 @@
   width: 12px;
 }
 
-.card_back_wrapper .card .card_back .layer .corner:nth-of-type(1) {
+.no_selected_card .card .card_back .layer .corner:nth-of-type(1) {
   right: 0px;
   top: 0px;
 }
 
-.card_back_wrapper .card .card_back .layer .corner:nth-of-type(2) {
+.no_selected_card .card .card_back .layer .corner:nth-of-type(2) {
   left: 0px;
   top: 0px;
   transform: rotateZ(-90deg);
 }
 
-.card_back_wrapper .card .card_back .layer .corner:nth-of-type(3) {
+.no_selected_card .card .card_back .layer .corner:nth-of-type(3) {
   left: 0px;
   bottom: 0px;
   transform: rotateZ(180deg);
 }
 
-.card_back_wrapper .card .card_back .layer .corner:nth-of-type(4) {
+.no_selected_card .card .card_back .layer .corner:nth-of-type(4) {
   right: 0px;
   bottom: 0px;
   transform: rotateZ(90deg);
+}
+
+.selected_card {
+  position: relative;
+  width: 140px;
+  height: 190px;
+  transition: transform 0.3s;
+  margin-left: -35px;
+  transform: scale(1.08);
+}
+
+.selected_card .card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #d4cd96;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s cubic-bezier(0.49, 0.23, 0.58, 0.49);
+}
+
+.selected_card .card .card_back {
+  background: repeating-linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 0.3),
+    transparent 1px,
+    rgba(0, 0, 0, 0.3) 2px
+  );
+  background-size: 3px 3px;
+  background-color: #302f34;
+  border-radius: 1px;
+  box-shadow: 0px -6px 8px 0px rgb(251 247 17 / 30%),
+    0px 6px 8px 0px rgb(251 247 17 / 20%), 6px 0px 8px 0px rgb(251 247 17 / 10%),
+    -6px 0px 8px 0px rgb(251 247 17 / 20%);
+  cursor: pointer;
+  height: 100%;
+  left: 0;
+  padding: 1rem;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.selected_card .card .card_back .layer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  position: relative;
+}
+
+.selected_card .card .card_back .layer h3 {
+  text-align: center;
+  font-size: 1.6rem;
+  margin: 0 auto;
+  font-weight: 600;
+}
+
+.selected_card .card .card_back .layer .corner {
+  border-right: 2px solid #d4cd96;
+  border-top: 2px solid #d4cd96;
+  height: 12px;
+  position: absolute;
+  width: 12px;
+}
+
+.selected_card .card .card_back .layer .corner:nth-of-type(1) {
+  right: 0px;
+  top: 0px;
+}
+
+.selected_card .card .card_back .layer .corner:nth-of-type(2) {
+  left: 0px;
+  top: 0px;
+  transform: rotateZ(-90deg);
+}
+
+.selected_card .card .card_back .layer .corner:nth-of-type(3) {
+  left: 0px;
+  bottom: 0px;
+  transform: rotateZ(180deg);
+}
+
+.selected_card .card .card_back .layer .corner:nth-of-type(4) {
+  right: 0px;
+  bottom: 0px;
+  transform: rotateZ(90deg);
+}
+
+@media (max-width: 684px) {
+  .no_selected_card {
+    width: 120px;
+    height: 190px;
+  }
+
+  .selected_card {
+    width: 120px;
+    height: 190px;
+  }
+}
+
+@media (max-width: 580px) {
+  .no_selected_card {
+    width: 110px;
+    height: 190px;
+  }
+
+  .selected_card {
+    width: 110px;
+    height: 190px;
+  }
+}
+
+@media (max-width: 510px) {
+  .no_selected_card {
+    width: 80px;
+    height: 190px;
+    margin-left: 0;
+  }
+
+  .selected_card {
+    width: 80px;
+    height: 190px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .no_selected_card {
+    width: 70px;
+    height: 190px;
+  }
+
+  .no_selected_card .card .card_back .layer h3 {
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+
+  .selected_card {
+    width: 70px;
+    height: 190px;
+  }
+
+  .selected_card .card .card_back .layer h3 {
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+}
+
+@media (max-width: 420px) {
+  .no_selected_card {
+    width: 60px;
+    height: 150px;
+  }
+
+  .no_selected_card .card .card_back .layer h3 {
+    font-size: 1rem;
+  }
+  
+  .selected_card {
+    width: 60px;
+    height: 150px;
+  }
+
+  .selected_card .card .card_back .layer h3 {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 360px) {
+  .no_selected_card {
+    width: 50px;
+    height: 150px;
+  }
+  
+  .no_selected_card .card .card_back .layer h3 {
+    font-size: 0.7rem;
+  }
+  
+  .selected_card {
+    width: 50px;
+    height: 150px;
+  }
+
+  .selected_card .card .card_back .layer h3 {
+    font-size: 0.7rem;
+  }
 }
