ADD: api joinroom

--- a/src/components/lobby/Lobby.module.css
+++ b/src/components/lobby/Lobby.module.css
@@ -9,6 +9,16 @@
   overflow-y: scroll;
 }
 
+.container::-webkit-scrollbar {
+  display: none;
+}
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
 .createButton {
   width: 1300px;
   max-width: 95%;
